--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav><b>
                 <a href="#home">HOME</a>
                 <a href="#aboutme">ABOUT ME</a>
-                <a href="#desain">DESAIN FOCUSES</a>
+                <a href="#desain">DESIGN FOCUSES</a>
                 <a href="#project">PROJECT GALLERY</a>
                 <a href="#contact">CONTACT</a></b>
             </nav>
